working on mobile issue, added reset.css file

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,18 @@
-.App {
-  /* text-align: center;
+@import './css/reset-normalize.css';
 
+.App {
+  
   position: relative;
   height: 100%;
   width: 100%;
-  overflow: hidden; */
+  overflow: hidden;
+  
+  /* text-align: center;
 
-  position: relative;
   display: flex;
-  flex-direction: column; /* Stack children vertically */
-  align-items: center;    /* Center content horizontally */
-  justify-content: center; /* Center content vertically */
-  height: 100vh; /* Full viewport height */
-  width: 100vw; /* Full viewport width */
-  overflow: hidden; /* Prevent overflowing of the content */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw; */
 }
