--- a/src/components/EraseBtn/erasebtn.css
+++ b/src/components/EraseBtn/erasebtn.css
@@ -1,14 +1,12 @@
 .erase-btn {
   position: fixed;
-  bottom: 1vh;
-  left: 1vh;
+  bottom: 10px;
+  left: 10px;
   padding: 10px;
   background-color: salmon;
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  /* height: 8vh;
-  width: 8vh; */
   height: 50px;
   width: 50px;
   z-index: 9999;
@@ -21,9 +19,3 @@
   box-shadow: 1px 1px 2px black;
   background-color: #ff9999;
 }
-/* 
-@media screen and (max-width: 500px) {
-  .erase-btn {
-    margin: 1vh;
-  }
-} */
