--- a/src/components/Fullscreen/fullscreen.css
+++ b/src/components/Fullscreen/fullscreen.css
@@ -1,19 +1,11 @@
 #fullscreen {
-  /* position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px;
-  padding: 10px; */
-  position: fixed;
-  top: 1vh;
-  right: 1vh;
-  padding: 1vh;
+  padding: 10px;
   background-color: #ccc;
   border: none;
   cursor: pointer;
-  /* height: 10vh;
-  width: 10vh; */
-  /* height: 8vh;
-  width: 8vh; */
   height: 50px;
   width: 50px;
   z-index: 9998;
