--- a/src/components/ScreenshotBtn/screenshotbtn.css
+++ b/src/components/ScreenshotBtn/screenshotbtn.css
@@ -1,14 +1,12 @@
 .screenshotBtn {
   position: fixed;
-  top: 1vh;
-  left: 1vh;
+  top: 10px;
+  left: 10px;
   padding: 10px;
   background-color: #FFD700;
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  /* height: 8vh;
-  width: 8vh; */
   height: 50px;
   width: 50px;
   z-index: 9999;
@@ -21,9 +19,3 @@
   box-shadow: 1px 1px 2px black;
   background-color: #FFFFCC;
 }
-/* 
-@media screen and (max-width: 500px) {
-  .screenshotBtn {
-    margin: 1vh;
-  }
-} */
